tests/transpiler/x/swift/group_by_left_join.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden840429466/025/main.swift:24:63: error: type 'Any' does not conform to protocol 'Hashable'
22 | _list.sort { a, b in String(describing: a["key"]) < String(describing: b["key"]) }
23 | for g in _list {
24 |     _res.append(["name": g["key"]!, "count": (((({ var _res: [[Any: Any]] = []
   |                                                               `- error: type 'Any' does not conform to protocol 'Hashable'
25 |     for r in g["items"] as! [[String: Any]] {
26 |         if r["o"]! {

/tmp/TestSwiftTranspiler_VMValid_Golden840429466/025/main.swift:9:31: warning: forced cast of 'Int' to same type has no effect
 7 | for c in customers {
 8 |     for o in orders {
 9 |         if ((o["customerId"]! as! Int) == (c["id"]! as! Int)) {
   |                               `- warning: forced cast of 'Int' to same type has no effect
10 |             let _key = c["name"]!
11 |             let _ks = String(describing: _key)

/tmp/TestSwiftTranspiler_VMValid_Golden840429466/025/main.swift:26:18: error: cannot convert value of type 'Any' to expected condition type 'Bool'
24 |     _res.append(["name": g["key"]!, "count": (((({ var _res: [[Any: Any]] = []
25 |     for r in g["items"] as! [[String: Any]] {
26 |         if r["o"]! {
   |                  `- error: cannot convert value of type 'Any' to expected condition type 'Bool'
27 |             _res.append(r)
28 |         }
